<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_of_person"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textCapWords"
        android:textSize="20sp"/>

    <TextView
        style="@style/header"
        android:text="@string/toppings" />

    <CheckBox
        style="@style/checkbox"
        android:id="@+id/whippedCream"
        android:checked="false"
        android:text="@string/whiped_cream" />

    <CheckBox
        style="@style/checkbox"
        android:id="@+id/Chocolate"
        android:checked="false"
        android:text="@string/chocolate" />

    <TextView
        style="@style/header"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="minus"
            android:text="-"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/quantityNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="plus"
            android:text="+"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        style="@style/header"
        android:text="@string/unit_price"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/minusUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="minusUnitPrice"
            android:text="-"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/unitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="5,00 zł"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/plusUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="plusUnitPrice"
            android:text="+"
            android:textSize="15sp" />
    </LinearLayout>

    <CheckBox
        style="@style/checkbox"
        android:id="@+id/ownCup"
        android:layout_width="wrap_content"
        android:checked="true"
        android:text="@string/with_own_cup" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textSize="24sp" />

    <TextView
        style="@style/header"
        android:text="@string/order_summary" />
    <TextView
        android:id="@+id/order_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:text=""
        android:textSize="20sp" />

</LinearLayout>
</ScrollView>